# Embedded-Linux-Team-E1

Python Tasks Team/Kerolos Mikhail/03/: AVR_GPIO.py  Access_Emails.py  Words_Count.py  lines.txt
Python Tasks Team/Kerolos Mikhail/05-GUI/: factorial.py
Python Tasks Team/Kerolos Mikhail/05-GUI/server_clients/: client1.py  client2.py  client3.py  server.py
Python Tasks Team/Kerolos Mikhail/C++_tasks/01/: ASCII_Table.cpp  Decimal_Binary.cpp  Max_number.cpp  Multiplication_Table.cpp  Right_Angle_Tri.cpp  Sum_Digits.cpp  Vowel_Not.cpp
Python Tasks Team/Kerolos Mikhail/C++_tasks/02/: Delete_Number.cpp  Even_Odd.cpp  Max_Number.cpp  Merge_Arrays.cpp  Search_Number.cpp  Sort_Array.cpp  Square_Number.cpp
Python Tasks Team/Kerolos Mikhail/C++_tasks/02/Address_Book/: a.out  main.cpp  user.cpp  user.hpp
Python Tasks Team/Kerolos Mikhail/C++_tasks/03_OOP/: Acc_Array.cpp  All_array_even.cpp  Backtrace.cpp  Fill_Array.cpp  Interrupt_Signal.cpp  Is_char_digit.cpp  main
Python Tasks Team/Kerolos Mikhail/C++_tasks/04_OOP/Logs/Aspose.Cells.Cpp.Linux.23.9/Demo/: CMakeLists.txt  main.cpp
Python Tasks Team/Kerolos Mikhail/C++_tasks/04_OOP/Logs/Aspose.Cells.Cpp.Linux.23.9/Demo/sourceFile/: README.txt
Python Tasks Team/Kerolos Mikhail/Python_tasks/03/: Command_Args.py  Lines_Count.py  Write_list.py  parse_header_file.py
Python Tasks Team/Kerolos Mikhail/Python_tasks/05-GUI/: Buttons_Display.py  Display_sum.py  Gauge.py  Led.py  Word_Reverse.py
Python Tasks Team/Kerolos Mikhail/Python_tasks/Employees_Database/: Database.py  Employee.py  Global.py
Python Tasks Team/Kerolos Mikhail/Python_tasks/Python_challenges/: copy_paste.py
Python Tasks Team/yasser saeed/GUI/: lab_2.py
Python Tasks Team/yasser saeed/Lec_1/GUI/: GPIO_Config.py  lab_1.py  lab_3.py  lab_4.py  lab_5.py
(+375 files in other folders)
